--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Dancing+Script|Fredoka+One|Lobster|Roboto" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,8 +19,11 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    --><meta name="description" content="A website to check which StarWars Character you are.">
+    <meta name="og:title" property="og:title" content="StarWars App">
+    <meta name="og:description" property="og:description" content="A website to check which StarWars Character you are.">
+    <meta name="og:image" property="og:image" content="%PUBLIC_URL%/star-wars-logo.jpg">
+    <title>StarWars App</title>
   </head>
   <body>
     <noscript>
